src/App.css
/* ... */
.about-content{
    transition: all .35s ease;
}

.about-content:hover{
    transform: translateY(-4px);
    box-shadow:
      0 20px 50px rgba(0,0,0,.08);
}

/* BACKGROUND IMAGE */

.about-bg{
    position:absolute;
    inset:0;
    z-index:0;
    opacity:.08;
    pointer-events:none;
}

.about-bg img{
    width:100%;
    height:100%;
    object-fit:cover;
}


/* CONTENT ABOVE BG */

.about-tag,
.about-content h2,
.about-line,
.about-content p{
    position:relative;
    z-index:2;
}

/* TAG */

.about-tag{
    display:inline-block;
    padding:12px 24px;
    border-radius:999px;
    background:#eef5ec;
    border:1px solid #d9e5d6;

    font-size:13px;
    font-weight:700;
    letter-spacing:4px;
    color:#2e7d32;

    margin-bottom:20px;
}

/* TITLE */

.about-content h2{
    font-size:55px;
    line-height:1.15;
    font-weight:800;
    color:#2e7d32;

    margin-bottom:12px;
}

/* LINE */

.about-line{
    width:120px;
    height:4px;
    background:#2e7d32;
    border-radius:50px;

    margin-bottom:28px;
}

/* PARAGRAPH */

.about-content p{
    font-size:20px;
    line-height:1.9;
    color:#4d5b68;
    max-width:650px;
    margin-bottom:18px;
}

/* ==========================================
   TABLET
========================================== */

@media(max-width:992px){

.about-layout{

grid-template-columns:1fr;

gap:45px;

}

.about-content{

max-width:100%;

}

.about-content h2{

font-size:44px;

}

}

/* ==========================================
   MOBILE
========================================== */

@media(max-width:768px){

.about-section{

padding:70px 0;

}

.about-image{
   margin-left:30px;
}


.about-content{

text-align:center;
margin-left:13px;
max-width:480px;
}

.about-line{

margin:20px auto 28px;

}

.about-content h2{

font-size:34px;

}

.about-content p{

font-size:17px;

}

}

/* ===================================
ESG SECTION
=================================== */

.esg-section{
    padding:30px 0;
    background:#f7f8f5;
}

.esg-section .container{
    max-width:1600px;
    margin:0 auto;
    padding:0 0px;
}

.esg-layout{
    display:grid;
    grid-template-columns:58% 42%;
    gap:65px;
    align-items:center;
}

/* ===================================
CARDS
=================================== */

.esg-cards{
    display:grid;
    grid-template-columns:1fr 1fr;
    gap:24px;
}

.esg-card{
    background:#fff;
    border-radius:28px;
    padding:26px;

    display:flex;
    align-items:center;
    gap:22px;

    min-height:180px;

    box-shadow:0 10px 25px rgba(0,0,0,.05);
}

.esg-card-wide{
    grid-column:1 / -1;
}

.icon-circle{
    width:72px;
    height:72px;

    border-radius:50%;
    background:#F1F5EF;

    display:flex;
    align-items:center;
    justify-content:center;

    color:#2E7D32;

    flex-shrink:0;
}

.esg-card-content{
    flex:1;
    border-left:1px solid #e6e6e6;
    padding-left:22px;
}

.esg-card-content h3{
    font-size:18px;
    color:#2E7D32;
    font-weight:700;
    margin-bottom:12px;
}

.esg-card-content span{
    display:block;
    width:42px;
    height:4px;
    background:#2E7D32;
    border-radius:50px;
    margin-bottom:15px;
}

.esg-card-content p{
    font-size:16px;
    line-height:1.8;
    color:#687280;
}

.esg-card{
    transition:
        transform .35s ease,
        box-shadow .35s ease,
        border-color .35s ease;
}

.esg-card:hover{
    transform: translateY(-8px);
    box-shadow:
        0 20px 40px rgba(0,0,0,.08);
}

.esg-card:hover .icon-circle{
    transform: scale(1.08);
    background:#f3f8f3;
}

.esg-card:hover h3{
    color:#228B22;
}

.icon-circle{
    transition: all .35s ease;
}

.esg-card h3{
    transition: color .35s ease;
}

/* ===================================
RIGHT SHOWCASE
=================================== */

.esg-showcase{
    position:relative;
    min-height:720px;

    border-radius:34px;
    overflow:hidden;

    border: 1px solid rgba(40,130,55,.08);

    box-shadow:
        0 20px 50px rgba(0,0,0,0.08),
        0 8px 20px rgba(0,0,0,0.04);
}

.esg-showcase img{
    position:absolute;
    inset:0;

    width:150%;
    height:150%;

    object-fit:cover;

    object-position:90% 150%;
    transform: translateY(-20px);

    filter:
      brightness(1.02)
      contrast(1.08)
      saturate(1.1);
}

.esg-overlay{
    position:absolute;
    top:0;
    left:0;
    right:0;

    height:75%;

    background:linear-gradient(
        to bottom,
        rgba(255,255,255,.95) 0%,
        rgba(255,255,255,.90) 50%,
        rgba(255,255,255,.70) 80%,
        rgba(255,255,255,0) 100%
    );

    z-index:1;
}

.esg-content{
    position:absolute;
    top:60px;
    left:45px;

    z-index:3;

    max-width:480px;
}

.esg-tag{
    display:inline-flex;
    width:max-content;

    padding:14px 30px;

    border-radius:999px;

    background:#EDF4EA;
    border:1px solid #dce8d8;

    color:#2E7D32;

    font-size:13px;
    font-weight:700;
    letter-spacing:4px;

    margin-bottom:35px;
}

.esg-content h2{
    color:#2E7D32;

    font-size:42px;
    line-height:0.95;
    font-weight:800;

    max-width:600px;

    margin-bottom:5px;
}

.esg-line{
    width:100px;
    height:4px;

    background:#2E7D32;
    border-radius:999px;

    margin-bottom:20px;
}

.esg-content p{
    display:inline-block;
    margin-top: 12px;
    max-width: 420px;
    box-shadow:
      0 8px 25px rgba(0,0,0,.06);
    background:rgba(255,255,255,.78);
    backdrop-filter:blur(6px);
    padding:18px 22px;
    border-radius:16px;
    transition: all .35s ease;
}

.esg-content p:hover{
    transform: translateY(-4px);
    box-shadow:
      0 16px 35px rgba(0,0,0,.10);
}
/* ... */

